tests/errors/attribute-derive-ord-enum.ari
@derive(Ord)
enum Mode {
  Slow,
  Fast,
}

fn main() -> i64 {
  return 0;
}
